[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://src/main_menu/pong_demo.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/FreeSansBold.otf"

[sub_resource type="DynamicFont" id=2]
size = 192
font_data = SubResource( 1 )

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopupLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="DemoLayer" type="CanvasLayer" parent="."]

[node name="PongDemo" parent="DemoLayer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="MenuLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Margin" type="MarginContainer" parent="MenuLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="VBoxContainer" parent="MenuLayer/Margin"]
margin_left = 200.0
margin_top = 50.0
margin_right = 1720.0
margin_bottom = 980.0
custom_constants/separation = 500
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="MenuLayer/Margin/HBox"]
margin_right = 1520.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 2 )
text = "GAME_NAME"
align = 1

[node name="MainButtons" type="HBoxContainer" parent="MenuLayer/Margin/HBox"]
margin_top = 712.0
margin_right = 1520.0
margin_bottom = 930.0
size_flags_vertical = 3
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayAgainstAI" type="Button" parent="MenuLayer/Margin/HBox/MainButtons"]
margin_right = 305.0
margin_bottom = 218.0
size_flags_horizontal = 3
text = "PLAY_AGAINST_AI"

[node name="PlayRanked" type="Button" parent="MenuLayer/Margin/HBox/MainButtons"]
margin_left = 405.0
margin_right = 710.0
margin_bottom = 218.0
size_flags_horizontal = 3
disabled = true
text = "PLAY_RANKED"

[node name="Rankings" type="Button" parent="MenuLayer/Margin/HBox/MainButtons"]
margin_left = 810.0
margin_right = 1115.0
margin_bottom = 218.0
size_flags_horizontal = 3
text = "RANKINGS"

[node name="Settings" type="Button" parent="MenuLayer/Margin/HBox/MainButtons"]
margin_left = 1215.0
margin_right = 1520.0
margin_bottom = 218.0
size_flags_horizontal = 3
text = "SETTINGS"
[connection signal="pressed" from="MenuLayer/Margin/HBox/MainButtons/PlayAgainstAI" to="." method="_on_PlayAgainstAI_pressed"]
[connection signal="pressed" from="MenuLayer/Margin/HBox/MainButtons/PlayRanked" to="." method="_on_PlayRanked_pressed"]
[connection signal="pressed" from="MenuLayer/Margin/HBox/MainButtons/Rankings" to="." method="_on_Rankings_pressed"]
[connection signal="pressed" from="MenuLayer/Margin/HBox/MainButtons/Settings" to="." method="_on_Settings_pressed"]
